minijinja/tests/snapshots/test_templates__vm@err_strict_undefined_print.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ undefined_value }}"
info:
  $settings:
    undefined: strict
input_file: minijinja/tests/inputs/err_strict_undefined_print.txt
---
!!!ERROR!!!

Error {
    kind: UndefinedError,
    name: "err_strict_undefined_print.txt",
    line: 1,
}

undefined value (in err_strict_undefined_print.txt:1)
----------------------- err_strict_undefined_print.txt ------------------------
   1 > {{ undefined_value }}
     i    ^^^^^^^^^^^^^^^ undefined value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
